@@ -35,7 +35,7 @@ template<class T> T add4(T v1, T v2)
 
 void subr3()
 {
-  char c;
+  unsigned char c;
   int i;
   float f;
   
